--- a/app/index.html
+++ b/app/index.html
@@ -16,17 +16,13 @@
     <!-- endbuild -->
   </head>
   <body>
+    <header ="col-md-12">
+      <h1>Daniel Zamorano</h1> <h2>and Monica and Esteban</h2>
+    </header>
     <div class="container">
-      <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
-        <p>You now have</p>
-        <ul>
-          <li>HTML5 Boilerplate</li>
-          <li>Bootstrap</li>
-          <li>Font Awesome <i class="fa fa-flag"></i></li>
-        </ul>
-        <p>installed.</p>
-        <h3>Enjoy coding! - Yeoman</h3>
+    <div class="row">
+      <div class="col-md-12">
+
       </div>
     </div>
 
