some changes for header.
	#

--- a/app/index.html
+++ b/app/index.html
@@ -15,18 +15,14 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body>
+  <body data-theme="default">
     <header class="col-md-12">
         <span>I'm</span>
         <h1>Daniel Zamorano</h1>
-        <h2>and Monica and Esteban</h2>
     </header>
     <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-
-      </div>
-    </div>
+    <div class="col-md-12">1</div>
+    <div class="col-md-12">2</div>
 
 
     <!--[if lt IE 7]>
@@ -46,6 +42,7 @@
 
         <!-- build:js scripts/main.js -->
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/jquery-backstretch/jquery.backstretch.min.js"></script>
         <script src="scripts/main.js"></script>
         <script src="scripts/hello.js"></script>
         <!-- endbuild -->
